content/v1.6/Introduction/getting-started.md
---
title: "Getting Started"
slug: "getting-started"
hidden: false
metadata: 
  title: "Getting Started - Chainlink"
  description: "Explore Chainlink's comprehensive guides and documentation to help you start working with Chainlink as quickly as possible."
  image: 
    0: "https://files.readme.io/670379d-OpenGraph_V3.png"
    1: "OpenGraph V3.png"
    2: 1459
    3: 1459
    4: "#dbe1f8"
createdAt: "2019-04-11T17:37:20.713Z"
updatedAt: "2021-02-26T11:35:09.253Z"
---
[block:callout]
{
  "type": "success",
  "title": "Join the Spring 2021 Chainlink Hackathon!",
  "body": "This March, you have the chance to help build the next generation of smart contracts.\n\nThe Chainlink Spring Hackathon has a prize pot of over $80k+ and is sponsored by some of the most prominent crypto projects.\n\nMarch 15th - April 11th\n<a href=\"https://chain.link/hackathon?utm_source=chainlink&utm_medium=developer-docs&utm_campaign=hackathon\" target=\"_blank\"><b>Register Here.</b></a>"
}
[/block]

[block:html]
{
  "html": "<div class=\"cl-custom-page\">\n  <div class=\"row center cl-section cl-section--one\">\n    <div class=\"col-md-4 col-sm-12 col-xs-12\">\n        <div class=\"cl-featuredcard\">\n          <img src=\"https://uploads-ssl.webflow.com/5e444500cbc42eeb5198206f/5e7898724c71bddf6749df17_DeFi2.svg\"\n            class=\"cl-image-featured\">\n          <h3>Get Crypto Prices in your Smart Contracts</h3>\n          <p>Retrieve the latest prices of assets in your smart contracts with a single function call.</p>\n          <a href=\"https://docs.chain.link/docs/using-chainlink-reference-contracts\" class=\"cl-button--ghost\">Learn\n            More </a>\n        </div>\n    </div>\n\n    <div class=\"col-md-4 col-sm-12 col-xs-12\">\n        <div class=\"cl-featuredcard\">\n          <img src=\"https://uploads-ssl.webflow.com/5e444500cbc42eeb5198206f/5e7898724c71bd62c149df16_Example.svg\"\n            class=\"cl-image-featured\">\n          <h3>Generate Verifiable Random Numbers</h3>\n          <p>Use Chainlink VRF to consume randomness in your smart contracts.</p>\n          <a href=\"https://docs.chain.link/docs/chainlink-vrf\" class=\"cl-button--ghost\">Learn\n            More </a>\n        </div>\n    </div>\n\n    <div class=\"col-md-4 col-sm-12 col-xs-12\">\n        <div class=\"cl-featuredcard\"><img\n            src=\"https://uploads-ssl.webflow.com/5e444500cbc42eeb5198206f/5e7894ddbc6262c7a18da684_RequestSmall.svg\"\n            class=\"cl-image-featured\" height=\"50\">\n          <h3>Call External APIs from Smart Contracts</h3>\n          <p>Request &amp; Receive data from any API using the Chainlink contract library.</p>\n          <a href=\"https://docs.chain.link/docs/request-and-receive-data\" class=\"cl-button--ghost\">Learn More\n          </a>\n        </div>\n    </div>\n  </div>\n\n\n  <div class=\"cl-section\">\n    <img src=\"https://uploads-ssl.webflow.com/5e444500cbc42eeb5198206f/5e789d70c115820a2354f2cc_ChainlinkProject.svg\"\n      class=\"cl-image-featured\" />\n    <h2>New to Ethereum and Smart Contracts?</h2>\n    <p>Build your first smart contract connected to off-chain data with our Beginner's Walkthrough</p>\n    <a href=\"https://docs.chain.link/docs/beginners-tutorial\">Start Building</a>\n  </div>\n\n  <div class=\"cl-section\">\n    <div class=\"cl-box cl-box__lightblue\">\n      <div class=\"row\">\n        <div class=\"col-md-6 col-sm-12 col-xs-12\">\n          <div class=\"cl-featuredcard\">\n            <h3>Chainlink Architecture</h3>\n            <p>Discover how the Chainlink ecosystem bridges the gap between off-chain data and smart contracts.</p>\n            <a href=\"https://docs.chain.link/docs/architecture-overview\" class=\"cl-button--ghost\">Architecture</a>\n          </div>\n        </div>\n        <div class=\"col-md-6 col-sm-12 col-xs-12\">\n          <div class=\"cl-featuredcard\">\n            <h3>Discover Chainlinks</h3>\n            <p>Find everything you need to build your connected smart contracts on the world's first\n              oracle market</p>\n            <a href=\"https://market.link/\" class=\"cl-button--ghost\" target=\"_blank\">Chainlink Market ↗</a>\n          </div>\n        </div>\n      </div>\n    </div>\n  </div>\n\n  <div class=\"cl-section cl-section--docs\">\n    <h2>Chainlink Documentation</h2>\n    <div class=\"row center cl-section\">\n      <div class=\"col-md-4 col-sm-12 col-xs-12\">\n        <div class=\"cl-featuredcard-docs\">\n          <img src=\"https://uploads-ssl.webflow.com/5e444500cbc42eeb5198206f/5e711675730ed7bcac4a99c7_Docs.svg\"\n            class=\"cl-image-featured\">\n          <h3>Documentation</h3>\n          <div class=\"docs__main-link\"><a href=\"https://docs.chain.link/docs/architecture-overview\">&gt; Architecture\n              Overview</a></div>\n          <p><a href=\"https://docs.chain.link/docs/using-chainlink-reference-contracts\">Price Feeds</a><br><a\n              href=\"https://docs.chain.link/docs/chainlink-vrf\">Chainlink VRF</a><br><a\n              href=\"https://docs.chain.link/docs/request-and-receive-data\">API Calls</a></p>\n        </div>\n      </div>\n\n      <div class=\"col-md-4 col-sm-12 col-xs-12\">\n        <div class=\"cl-featuredcard-docs\">\n          <img\n            src=\"https://uploads-ssl.webflow.com/5e444500cbc42eeb5198206f/5e789ace3ea5b8650cd5a79f_ExternalAdapters.svg\"\n            class=\"cl-image-featured\">\n          <h3>External Adapters</h3>\n          <div class=\"docs__main-link\"><a href=\"https://docs.chain.link/docs/external-adapters\">&gt; Overview</a></div>\n          <p><a href=\"https://docs.chain.link/docs/contract-creators\">Contract Creators</a><br><a\n              href=\"https://docs.chain.link/docs/developers\">Developers</a><br><a\n              href=\"https://docs.chain.link/docs/node-operators\">Node Operators</a></p>\n        </div>\n      </div>\n\n      <div class=\"col-md-4 col-sm-12 col-xs-12\">\n        <div class=\"cl-featuredcard-docs\">\n\n          <img src=\"https://uploads-ssl.webflow.com/5e444500cbc42eeb5198206f/5e711677c777c0bd0c747109_Nodes.svg\"\n            class=\"cl-image-featured\">\n          <h3>Node Operators</h3>\n          <div class=\"docs__main-link\"><a href=\"https://docs.chain.link/docs/node-operator-overview\">&gt; Overview</a>\n          </div>\n          <p><a href=\"https://docs.chain.link/docs/running-a-chainlink-node\">Running a Chainlink Node</a><br><a\n              href=\"https://docs.chain.link/docs/fulfilling-requests\">Fulfilling Requests</a><br><a\n              href=\"https://docs.chain.link/docs/run-an-ethereum-client\">Run an Ethereum Client</a></p>\n        </div>\n      </div>\n    </div>\n\n  </div>\n\n\n  <div class=\"cl-section cl-section--tools\">\n    <h2>Explore Chainlink Developer Tools</h2>\n    <div class=\"row center cl-section\">\n      <div class=\"col-md-4 col-sm-12 col-xs-12\">\n        <div class=\"cl-productcard\">\n          <a href=\"https://explorer.chain.link/\" target=\"_blank\" class=\"fill-div\">\n            <img src=\"https://uploads-ssl.webflow.com/5e444500cbc42eeb5198206f/5e711676c0d8d9ee70422688_Explorer.svg\"\n              class=\"cl-image-featured\">\n            <h3>Chainlink Explorer ↗</h3>\n          </a>\n        </div>\n      </div>\n      <div class=\"col-md-4 col-sm-12 col-xs-12\">\n        <div class=\"cl-productcard\">\n          <a href=\"https://www.npmjs.com/package/@chainlink/contracts\" target=\"_blank\" class=\"fill-div\"><img\n              src=\"https://uploads-ssl.webflow.com/5e444500cbc42eeb5198206f/5e711675d22595473f1c0c20_Contract.svg\"\n              class=\"cl-image-featured\">\n            <h3>Contracts ↗</h3>\n          </a>\n        </div>\n\n      </div>\n      <div class=\"col-md-4 col-sm-12 col-xs-12\">\n        <div class=\"cl-productcard\">\n          <a href=\"https://www.npmjs.com/package/@chainlink/test-helpers\" target=\"_blank\" class=\"fill-div\"><img\n              src=\"https://uploads-ssl.webflow.com/5e444500cbc42eeb5198206f/5e7116765b27d4521f92bac6_Tester.svg\"\n              class=\"cl-image-featured\">\n            <h3>Test Helpers ↗</h3>\n          </a>\n        </div>\n      </div>\n    </div>\n  </div>\n\n  <div class=\"cl-section cl-section--questions\">\n    <div class=\"cl-box cl-box-blue\">\n      <h2 style=\"margin-top:0px!important\">Still have questions?</h2>\n      <p>Find answers to our most commonly asked questions.</p>\n      <div class=\"rowcenter\" style=\"margin-top:24px!important\">\n        <a href=\"https://docs.chain.link/docs/faq\" class=\"cl-button--ghost cl-button--ghost--white\">FAQ</a> <a\n          href=\"https://discord.gg/2YHSAey\" class=\"cl-button--ghost cl-button--ghost--white\">Discord</a>\n        <a href=\"https://github.com/smartcontractkit/chainlink\"\n          class=\"cl-button--ghost cl-button--ghost--white\">Github</a>\n      </div>\n      <h3>中文开发者社区</h3>\n      <img src=\"https://files.readme.io/f639125-qr.png\" title=\"qr.png\" class=\"\" align=\"\" alt=\"\" caption=\"\" height=\"auto\" width=\"30%\">\n    </div>\n  </div>\n</div>\n\n<script>\n      document.querySelectorAll('.tz-link').forEach(item => {\n        item.addEventListener('mouseover', function (e) {\n          e.target.children[0].style.opacity = 1\n        })\n        item.addEventListener('mouseleave', function (e) {\n          e.target.children[0].style.opacity = 0\n        })\n      })\n    </script>\n"
}
[/block]